# opensource-server

./: .dockerignore  .gitignore  .gitmodules  ARCHITECTURE.md  Dockerfile  Makefile  README.md  compose.yml  deploy.yml  package-version
.github/: copilot-instructions.md
LDAP/: README.md
Wazuh/: add-agent.js  firewall-block.sh  firewall-drop.sh  local_decoders.xml  local_rules.xml  manage-agents.js  ossec.conf  package-lock.json  package.json  prune_agents.sh  register-agent.sh  runner.js
agent/: .fpm  .gitignore  Makefile  README.md  package-lock.json  package.json  tsconfig.json
authentik/: .gitignore  README.md  compose.yml
ci-cd automation/: README.md  check-container-exists.sh  delete-container.sh  setup-runner.sh  update-container.sh
ci-cd-automation/: update-container.sh
container creation/: README.md  automaticLXCDeployment.sh  create-container.sh  deployOnStart.sh  get-deployment-details.sh  get-lxc-container-details.sh  node_runtime_install.sh  python_runtime_install.sh  register-container.sh  setup-runner.sh  start_services.sh
container maintenance/: check-container-exists.sh  delete-container.sh  finish-migration.sh  start_services.sh  update-container.sh
container registration/: register_proxy_hook.sh
container updates/: update-container.sh
container-creation/: README.md  configureLDAP.sh  create-container-new.sh  create-container.sh  create-lxc-container  create-lxc-container.sh  deno_runtime_install.sh  deploy-application.sh  deployOnStart.sh  get-deployment-details.sh  get-lxc-container-details.sh  python_runtime_install.sh  register-container.sh  start_services.sh
create-a-container/: .fpm  .gitignore  Makefile  OIDC-IMPLEMENTATION.md  PR-JOBS.md  README.md  app.js  compose.ldap.env  compose.yml  create-container-wrapper.sh  example.env  jest.config.js  job-runner.js  job-runner.service  nfpm.yaml  openapi.v1.yaml  openapi.yaml  opensource-server.fpm  package-lock.json  package.json  playwright.config.js  server-fastify.js  server.js
deployment-scripts/: gatherBuildCommands.sh  gatherEnvVars.sh  gatherRuntimeLangs.sh  gatherSetupCommands.sh
dnsmasq service/: README.md  dnsmasq.conf
dnsmasq-service/: dnsmasq.conf
error-pages/: 403.html  404.html  502.html  auth-unavailable.html
gateway/: README.md  prune_iptables.sh  prune_temp_files.sh
images/: docker-bake.hcl  opensource-server.sources
intern-dnsmasq/: dnsmasq.conf
intern-jump/: extract-fingerprint.sh
intern-nginx/: nginx.conf  port_map.js  reverse_proxy.conf
intern-phxdc-pve1/: create-container.sh  prune_iptables.sh  register-container.sh  register_proxy_hook.sh
jump server/: extract-fingerprint.sh
manager-control-program/: .fpm  .gitignore  Makefile  README.md  pyproject.toml
manager-control-program/contrib/: postinstall.sh  preremove.sh
manager-control-program/contrib/default/: opensource-mcp
manager-control-program/contrib/systemd/: manager-control-program.service  opensource-mcp.service
manager-control-program/manager_control_program/: server.py
proxy-auth-lib/python/: pyproject.toml
proxy-auth-lib/python/tests/: test_middleware.py
proxy-auth-lib/python/trusted_proxy_auth/: __init__.py  django.py  flask.py
proxy-auth-lib/rust/: Cargo.toml
proxy-auth-lib/rust/src/: lib.rs
(+692 files in other folders)
