[project]
name = "manager-control-program"
version = "0.1.0"
description = "MCP server that exposes the create-a-container REST API as Model Context Protocol tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awslabs.openapi-mcp-server>=0.2.14",
    "fastmcp>=2.14.0,<4.0.0",
]

[project.scripts]
"manager-control-program" = "manager_control_program.server:main"
