[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "trusted-proxy-auth"
version = "0.1.0"
description = "Vendor-neutral ASGI middleware for signed proxy identity assertions"
requires-python = ">=3.12"
dependencies = [
  "PyJWT[crypto]==2.13.0",
]

[tool.setuptools.packages.find]
include = ["trusted_proxy_auth*"]
