[package]
name = "trusted-proxy-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
