[package]
name = "trusted-proxy-auth"
version = "0.1.0"
edition = "2021"
description = "Vendor-neutral Axum middleware that verifies signed proxy identity assertions (RS256 JWT via JWKS or a static public key)."
license = "Apache-2.0"
repository = "https://github.com/mieweb/opensource-server"
documentation = "https://github.com/mieweb/opensource-server/tree/main/proxy-auth-lib/rust"
readme = "../README.md"
keywords = ["jwt", "jwks", "proxy", "authentication", "axum"]
categories = ["authentication", "web-programming"]

[dependencies]
axum = "0.8.9"
gethostname = "1.0"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto", "use_pem"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
